# gridNode

./: .gitignore  CLAUDE.md  README.md  context.md
.claude/: context.md
agent/: .gitignore  agents.md  job-mockup.txt  summary.md
agent/computeshare_agent/: computeshare-agent.spec  install.bat  install.sh  pyproject.toml  requirements.txt
agent/computeshare_agent/computeshare_agent/: __init__.py  agent.py  artifact_uploader.py  config.py  docker_runner.py  log_streamer.py  prerequisites.py  resources.py  workspace.py
agent/computeshare_agent/tests/: mock_backend.py  test_docker_runner.py  test_full_flow.py  test_prerequisites.py  test_resources.py  test_runner.py
be/: .env.example  .gitignore  package-lock.json  package.json  tsconfig.json
be/prisma/: schema.prisma
be/src/: index.ts  server.ts
be/src/lib/: auth.ts  jobAccess.ts  jobEvents.ts  jobStatus.ts  matchCriteria.ts  s3.ts  sweeper.ts  token.ts
be/src/middleware/: requireAgentAuth.ts  requireRole.ts
be/src/router/: index.ts
be/src/routes/: agent.routes.ts  approvals.routes.ts  auth.routes.ts  jobs.routes.ts  machines.routes.ts
be/src/sockets/: index.ts
fe/: next.config.ts  package-lock.json  package.json
fe/app/: globals.css  layout.tsx  page.tsx
fe/app/approvals/: page.tsx
fe/app/jobs/: page.tsx
fe/app/login/: page.tsx
fe/app/machines/: page.tsx
fe/components/: JobCard.tsx  JobCreateModal.tsx  Navbar.tsx  StatusBadge.tsx
fe/components/ui/: card.tsx  dropdown-menu.tsx  toast.tsx
fe/lib/: api.ts  auth-client.ts  socket-context.tsx
fe/types/: api.ts
(+6 files in other folders)
