[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "computeshare-agent"
version = "0.1.0"
description = "ComputeShare owner-side agent for distributed compute sharing"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "psutil>=5.9.0",
    "GitPython>=3.1.0",
    "tqdm>=4.66.0",
]

[project.scripts]
computeshare-agent = "computeshare_agent.agent:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["computeshare_agent*"]

# With this file in place, your friend can install the agent in one line without even cloning the repo:
# bashpip install git+https://github.com/yourname/computeshare-agent.git
# Or if they clone locally:
# bashpip install -e .
# The -e flag installs it in editable mode — changes to the source files take effect immediately without reinstalling. Useful during development.
